--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,11 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # 设置 CUDA 编译器
+# set(CMAKE_PREFIX_PATH "/usr/local/cuda" ${CMAKE_PREFIX_PATH})
+set(CMAKE_CUDA_COMPILER "/usr/local/cuda/bin/nvcc")
 find_package(CUDA REQUIRED)
 
-include(${CMAKE_CURRENT_SOURCE_DIR}/CUDA.cmake)
+# include(${CMAKE_CURRENT_SOURCE_DIR}/CUDA.cmake)
 set(CMAKE_LANGUAGE_COMPILER )
 # 设置 CUTLASS 路径
 set(CUTLASS_PATH ./thirdparty/cutlass)
@@ -20,11 +22,6 @@ include_directories(
     ./csrc
 )
 link_directories(${CUDA_TOOLKIT_ROOT_DIR}/lib64)
-
-# 链接库路径
-# link_directories(
-#     /usr/local/cuda/lib64
-# )
 
 # 设置编译选项
 set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -arch=sm_80 --expt-relaxed-constexpr")
@@ -51,10 +48,10 @@ link_libraries(
     onebit_sparse
     cuda cudadevrt cudart_static cublas 
 )
-set_target_properties(onebit_sparse PROPERTIES
-    COMPILE_FLAGS "-g"
-    # LINK_FLAGS "2> error.txt"
-)
+# set_target_properties(onebit_sparse PROPERTIES
+#     COMPILE_FLAGS "-g"
+#     # LINK_FLAGS "2> error.txt"
+# )
 
 # 定义可执行文件及其源文件
 # add_executable(wmma wmma.cu)
